[package]
name = "mio-tun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.6", features = ["net", "os-poll"] }
winapi = { version = "0.3.9", features = ["wininet", "netioapi", "impl-default"] }
get-last-error = "0.1.1"
[target.'cfg(target_os = "windows")'.dependencies]
wtun = {git = "https://github.com/asakhar/wtun.git"}
[target.'cfg(not(target_os = "windows"))'.dependencies]
tun = "0.5"
